--- a/public/admin/styles/application.scss
+++ b/public/admin/styles/application.scss
@@ -42,5 +42,5 @@
 @import "shared/loading";
 @import "shared/btn_default";
 @import "shared/dl_horizontal";
-
 @import "shared/fileicons";
+@import "shared/colors";
