--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -38,9 +38,12 @@
 
 @import "cards";
 
+@import "tags";
+
 @import "list-categories";
 
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
 @import "shared/fileicons";
+@import "shared/colors";
