Tags appearance tuned

--- a/public/styles/_tags.scss
+++ b/public/styles/_tags.scss
@@ -4,3 +4,8 @@
 		color: color-yiq($value); // #fff or #111
 	}
 }
+
+.tag--bg-primary {
+	background-color: $primary;
+	color: color-yiq($primary);
+}
