--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -14,23 +14,36 @@
 // Application specific variables, overrides bootstrap vars.
 @import "application_variables";
 
+// Fonts
+@import "fonts";
+
 // Bootstrap
 @import "bootstrap";
 
 // Other SCSS
 @import "layout";
 
+@import "breadcrumb";
+
 @import "articles";
 
 @import "list-tree";
 
-@import "nav-login";
-
 @import "header";
+
+@import "footer";
 
 @import "forms";
 
+@import "buttons";
+
 @import "tables";
+
+@import "pagination";
+
+@import "tables-cart";
+
+@import "lists";
 
 @import "iobjects";
 
@@ -40,7 +53,25 @@
 
 @import "tags";
 
+@import "stickers";
+
+@import "banners";
+
+@import "checkout";
+
+@import "product-detail";
+
+@import "checkout-actions";
+
+@import "slider";
+
 @import "list-categories";
+
+@import "section-child-categories";
+
+@import "section_add_to_cart";
+
+@import "search_results";
 
 @import "shared/clearfix";
 @import "shared/loading";
