--- a/public/styles/_application_variables.scss
+++ b/public/styles/_application_variables.scss
@@ -2,5 +2,4 @@
 // Project specific Variables
 // --------------------------------------------------
 
-$breadcrumb-bg:            $white;
-$breadcrumb-padding-x:		 0;
+$max-page-width:					1400px;
