--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -1,13 +1,78 @@
 .card {
 	
+	border: none;
+	border: 1px dashed $border-color;
+	border-left: none;
+	border-top: none;
+	
+	position: relative;
+	
 	// override height attribute
 	.card-img-top, .card-img-bottom {
 		height: auto;
 	}
-}
-
-ul.card-deck {
-	@extend .list-unstyled;
+	
+	.card-title {
+		font-size: 1rem;
+	}
+	
+	.card-meta {
+		margin-top: 1rem;
+		font-size: 0.75rem;
+	}
+	
+	.card-footer {
+		background-color: transparent;
+		border-top: none;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-wrap: wrap;
+		.card-price {
+			.currency_main {
+				color: $green;
+				font-size: 1.25rem;
+				font-weight: 900;
+			}
+			&--before-discount {
+				color: $body-color;
+				text-decoration: line-through;
+				font-weight: 900;
+				color: $gray-500;
+			}
+			&--recommended-price {
+				flex-basis: 100%;
+				width: 100%;
+				color: $body-color;
+				color: $gray-500;
+				font-size: 0.75rem;
+				.currency_main {
+					text-decoration: line-through;	
+				}
+				
+			}
+		}
+		.card-footer-icon {
+			color: $body-color;
+			display: none;
+		}
+	}
+	
+	.card__tags {
+		position: absolute;
+		left: $grid-gutter-width/4;
+		top: $grid-gutter-width/4;
+		max-width: calc(100% - 100px);
+		.tag-item {
+			margin-bottom: 0.25rem;
+		}
+	}
+	
+	.card__flags {
+		position: absolute;
+		right: $grid-gutter-width/2;
+		top: $grid-gutter-width/2;
+	}
 }
 
 // When displaying lists as card decks, groups or columns 
@@ -27,11 +92,14 @@ ul.card-column, ol.card-column {
 
 // Whole card as a single ling
 a.card {
+	transition: all 0.5s;
 	.card-body {
 		color: $body-color;
 	}
 	&:hover {
+		transition: all 0.1s;
 		text-decoration: none;
+		background-color: $gray-100;
 		.card-title {
 			color: $link-color;
 		}
@@ -40,20 +108,247 @@ a.card {
 
 
 // Controlled widths for card
-.card-deck--sized {
+.card-deck--sized-4 {
 	.card {
-		// 2 cols on SM up
+		@include media-breakpoint-down(xs){
+			border-right: none;
+			&:last-child {
+				border-bottom: none;
+			}
+		}
 		@include media-breakpoint-up(sm){
 			flex-shrink: 0;
 			flex-grow: 0;
-			flex-basis: calc(50% - #{$card-deck-margin} * 2);
-			min-width: calc(50% - #{$card-deck-margin} * 2);
 			margin-bottom: $card-deck-margin * 2;
 		}
+		// 2 cols on SM up
+		@include media-breakpoint-between(sm, md){
+			flex-basis: calc(50% - #{$card-deck-margin} * 2);
+			min-width: calc(50% - #{$card-deck-margin} * 2);
+			
+			// borders handling
+			&:nth-child(2n+2) {
+				border-right: none;
+			}
+			&:last-child {
+				border-bottom: none;
+			}
+			// first in row, in last row
+			&:nth-child(2n+1) {
+				&:nth-last-child(1), &:nth-last-child(2) {
+					border-bottom: none;
+				}
+			}
+			// second in row, in last row
+			&:nth-child(2n+2) {
+				&:nth-last-child(1) {
+					border-bottom: none;
+				}
+			}
+		}
 		// 3 cols on LG up
-		@include media-breakpoint-up(lg){
+		@include media-breakpoint-only(lg){
 			flex-basis: calc(33.333% - #{$card-deck-margin} * 2);
 			min-width: calc(33.333% - #{$card-deck-margin} * 2);
+			
+			// borders handling
+			&:nth-child(3n+3) {
+				border-right: none;
+			}
+			&:last-child {
+				border-bottom: none;
+			}
+			// first in row, in last row
+			&:nth-child(3n+1) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+					border-bottom: none;
+				}
+			}
+			// second in row, in last row
+			&:nth-child(3n+2) {
+				&:nth-last-child(1), &:nth-last-child(2) {
+					border-bottom: none;
+				}
+			}
+		}
+		// 4 cols on LG up
+		@include media-breakpoint-up(xl){
+			flex-basis: calc(25% - #{$card-deck-margin} * 2);
+			min-width: calc(25% - #{$card-deck-margin} * 2);
+			
+			// borders handling
+			&:nth-child(4n+4) {
+				border-right: none;
+			}
+			&:last-child {
+				//border-right: none;
+				border-bottom: none;
+			}
+			// first in row, in last row
+			&:nth-child(4n+1) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4) {
+					border-bottom: none;
+				}
+			}
+			// second in row, in last row
+			&:nth-child(4n+2) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+					border-bottom: none;
+				}
+			}
+			// 3rd in row, in last row
+			&:nth-child(4n+3) {
+				&:nth-last-child(1), &:nth-last-child(2) {
+					border-bottom: none;
+				}
+			}
+		}
+	}
+}
+
+.card-deck--sized-3 {
+	.card {
+		@include media-breakpoint-down(sm){
+			border-right: none;
+			flex-basis: 100%;
+			&:last-child {
+				border-bottom: none;
+			}
+		}
+		// 3 cols on MD up
+		@include media-breakpoint-up(md){
+			flex-shrink: 0;
+			flex-grow: 0;
+			flex-basis: calc(33.333% - #{$card-deck-margin} * 2);
+			min-width: calc(33.333% - #{$card-deck-margin} * 2);
+			
+			// borders handling
+			&:nth-child(3n+3) {
+				border-right: none;
+			}
+			&:last-child {
+				border-bottom: none;
+			}
+			// first in row, in last row
+			&:nth-child(3n+1) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+					border-bottom: none;
+				}
+			}
+			// second in row, in last row
+			&:nth-child(3n+2) {
+				&:nth-last-child(1), &:nth-last-child(2) {
+					border-bottom: none;
+				}
+			}
+		}
+	}
+}
+
+.card-deck--sized-6 {
+	.card {
+		flex-basis: 100%;
+		
+		flex-shrink: 0;
+		flex-grow: 0;
+		
+		@include media-breakpoint-down(xs){
+			border-right: none;	
+		}
+		@include media-breakpoint-between(sm,md){
+			flex-basis: calc(33.333% - #{$card-deck-margin} * 2);
+			min-width: calc(33.333% - #{$card-deck-margin} * 2);
+			
+			// borders handling
+			&:nth-child(3n+3) {
+				border-right: none;
+			}
+			&:last-child {
+				border-bottom: none;
+			}
+			// first in row, in last row
+			&:nth-child(3n+1) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+					border-bottom: none;
+				}
+			}
+			// second in row, in last row
+			&:nth-child(3n+2) {
+				&:nth-last-child(1), &:nth-last-child(2) {
+					border-bottom: none;
+				}
+			}
+		}
+		@include media-breakpoint-up(lg) {
+			flex-basis: calc(#{percentage(1/6)} - #{$card-deck-margin} * 2);
+			min-width: calc(#{percentage(1/6)} - #{$card-deck-margin} * 2);
+	
+			// borders handling
+			&:nth-child(6n+6) {
+				border-right: none;
+			}
+			&:last-child {
+				//border-right: none;
+				border-bottom: none;
+			}
+			// first in row, in last row
+			&:nth-child(6n+1) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4), &:nth-last-child(5), &:nth-last-child(6) {
+					border-bottom: none;
+				}
+			}
+			// second in row, in last row
+			&:nth-child(6n+2) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4), &:nth-last-child(5) {
+					border-bottom: none;
+				}
+			}
+			// 3rd in row, in last row
+			&:nth-child(6n+3) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4) {
+					border-bottom: none;
+				}
+			}
+			// 4th in row, in last row
+			&:nth-child(6n+4) {
+				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+					border-bottom: none;
+				}
+			}
+			// 5th in row, in last row
+			&:nth-child(6n+5) {
+				&:nth-last-child(1), &:nth-last-child(2) {
+					border-bottom: none;
+				}
+			}
+	
+		}
+	}
+}
+
+.card-deck--hiddenmargin {
+	margin-left: 0 - $grid-gutter-width/2;
+	margin-right: 0 - $grid-gutter-width/2;
+}
+
+
+.section--list-products {
+	margin-bottom: $grid-gutter-width;
+	//border: 1px solid red;
+	.pagination-container {
+		margin-top: $grid-gutter-width;
+	}
+}
+
+.section--child-pages {
+	margin-top: $grid-gutter-width;
+	.card-deck {
+		margin-top: $grid-gutter-width;
+		.card {
+			background-color: $gray-100;
+			&:hover {
+				background-color: $gray-200;
+			}
 		}
 	}
 }
