--- a/public/styles/_iobjects.scss
+++ b/public/styles/_iobjects.scss
@@ -60,11 +60,22 @@
 		background-color: white;
 		text-decoration: none;
 		color: inherit;
+		border-bottom: 1px solid $border-color;
+		border-top: 1px solid $border-color;
 		.iobject__image {
 			flex-basis: 200px;
 			flex-shrink: 0;
+			position: relative;
+			.iobject__flags {
+				position: absolute;
+				right: 1rem;
+				top: 1rem;
+			}
 		}
 		.iobject__body {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
 			padding: $grid-gutter-width/2;
 			.iobject__title {
 				font-size: 1.25rem;
@@ -76,8 +87,8 @@
 				display: block;
 				margin-top: 1rem;
 				font-size: 1.25rem;
-				font-weight: 600;
-				color: $primary;
+				font-weight: 900;
+				color: $green;
 			}
 		}
 		@media(max-width: 700px){
@@ -86,10 +97,11 @@
 		&:hover {
 			text-decoration: none;
 			color: inherit;
-			box-shadow: 0px 0px 34px 0px rgba(0,0,0,0.35);
+			//box-shadow: 0px 0px 34px 0px rgba(0,0,0,0.35);
+			background-color: $gray-100;
 		}
 		& + & {
-			margin-top: 0 !important;
+			//margin-top: 0-$grid-gutter-width !important;
 		}
 	}
 	& + & {
