--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -1,3 +1,16 @@
+.body {
+	background-color: white;
+	max-width: $max-page-width;
+	margin: auto;
+}
+.container-fluid {
+	max-width: $max-page-width;
+	margin: auto;
+	@include media-breakpoint-up( sm ){
+		padding: 0 $grid-gutter-width;
+	}
+}
+
 // Applies CSS Grid for layout w/sidebar
 
 .has-nav-section {
@@ -31,14 +44,92 @@ footer {
 }
 
 section {
-	margin-bottom: $grid-gutter-width * 2;
+	/*margin-bottom: $grid-gutter-width * 2;
 	padding-top: 1rem;
-	border-top: 1px solid $gray-300;
+	border-top: 1px solid $gray-300;*/
 }
 
 header {
-	margin-bottom: $grid-gutter-width * 2;
-	padding-top: 1rem;
+	background-color: white;
+	/*margin-bottom: $grid-gutter-width * 2;
+	padding-top: 1rem;*/
+}
+
+header.content-header, .content-header {
+	/*clear: both;
+	float: none;
+	border: 1px solid rgba(pink,0.2);*/
+	display: flex;
+	article + & {
+		margin-top: $grid-gutter-width;
+	}
+	.content-header__image {
+		margin-bottom: $grid-gutter-width;
+		order: 2;
+		flex-basis: 50%;
+		flex-shrink: 0;
+		flex-grow: 0;
+	}
+	.content-header__text {
+		margin-bottom: $grid-gutter-width;
+		h1, .h1 {
+			//margin-bottom: $grid-gutter-width;
+			margin-bottom: 0;
+		}
+
+		.teaser {
+			//margin-top: ( 0 - $grid-gutter-width * 0.75 );
+			margin-top: $grid-gutter-width * 0.25;
+			p:last-child {
+				margin-bottom: 0;
+			}
+		}
+
+		.tags {
+			margin-bottom: 0.25em;
+			&:empty {
+				display: none;
+			}
+		}
+
+		.meta {
+			font-size: 0.75rem;
+			margin-top: $grid-gutter-width * 0.25;
+			//opacity: 0.75;
+		}
+	}
+	
+	.content-header__image + .content-header__text {
+		flex-basis: 50%;
+		flex-shrink: 0;
+		flex-grow: 0;
+		padding: $grid-gutter-width;
+		h1, .h1, .teaser, .meta, p {
+			color: white;
+		}
+		display: flex;
+		flex-direction: column;
+		h1, .h1 {
+			flex-grow: 10;
+		}
+		
+	}
+	@include media-breakpoint-down(md){
+		.content-header__image {
+			flex-basis: 40%;
+			display: flex;
+			align-items: center;
+		}
+		.content-header__image + .content-header__text {
+			flex-basis: 60%;
+		}
+	}
+	@include media-breakpoint-down(sm){
+		.content-header__image {
+			margin-bottom: 0;
+		}
+		display: block;
+	}
 }
 
 section.store-properties {
