--- a/public/styles/_tables.scss
+++ b/public/styles/_tables.scss
@@ -8,11 +8,36 @@ table.table {
 	p:last-child {
 		margin-bottom: 0;
 	}
+	thead {
+		tr {
+			th {
+				font-weight: 400;
+				font-size: 0.75rem;
+				line-height: 1.1;
+				vertical-align: top;
+			}
+		}
+	}
+	tbody {
+		tr {
+			th {
+				font-size: 0.75rem;
+			}
+		}
+	}
+	// Use inside TD to provide information from THEAD when THEAD is hidden on mobile
+	.table-hint-xs {
+		display: none;
+		margin-bottom: 0.15em;
+		font-size: 0.75rem;
+		font-weight: normal;
+		color: $body-color;
+	}
 }
 
 // Dark table header
 tr.table-dark {
-	th{
+	th {
 		background-color: $gray-600;
 		color: $gray-300;
 		border-bottom: none;
@@ -53,6 +78,20 @@ tr.table-dark {
 				border-bottom: 1px solid $table-border-color;
 				border-top: none;
 			}
+		}
+		tbody {
+			th {
+				border-bottom: none;
+			}
+		}
+		// Use inside TD to provide information from THEAD when THEAD is hidden on mobile
+		.table-hint-xs {
+			display: block;
+		}
+		
+		// Use when you want to hide thead on mobile
+		.thead--hidden-xs {
+			display: none;
 		}
 	}
 }
