Bootstrap upgraded to version 4.4

--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -167,7 +167,7 @@ ol.breadcrumb {
 			padding: 2px 2px !important;
 			height: 21px;
 			color: white;
-			max-width: 150px;
+			width: 150px;
 			&::placeholder {
 				color: rgba(white,0.75);
 			}
