Styled prices before discount and base prices

--- a/public/styles/_forms.scss
+++ b/public/styles/_forms.scss
@@ -44,7 +44,7 @@ form {
 		margin-bottom: $grid-gutter-width/2;
 		legend {
 			font-weight: 900;
-			color: black;
+			color: $headings-color;
 			font-size: 1rem;
 		}
 	}
