--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -35,21 +35,14 @@
 				font-weight: 900;
 			}
 			&--before-discount {
-				color: $body-color;
-				text-decoration: line-through;
-				font-weight: 900;
-				color: $gray-500;
-			}
-			&--recommended-price {
-				flex-basis: 100%;
-				width: 100%;
-				color: $body-color;
-				color: $gray-500;
-				font-size: 0.75rem;
+				display: block;
 				.currency_main {
-					text-decoration: line-through;	
+					color: $body-color;
+					text-decoration: line-through;
+					font-weight: 600;
+					color: $gray-500;
+					font-size: 1rem;
 				}
-				
 			}
 		}
 		.card-footer-icon {
