proces css debug

--- a/public/styles/_section_add_to_cart.scss
+++ b/public/styles/_section_add_to_cart.scss
@@ -58,6 +58,11 @@
 						.price {
 							text-decoration: line-through;
 						}
+						.moneysaved {
+							.price {
+								text-decoration: none;
+							}
+						}
 					}
 				}
 				form {
