Code synced with project Nabytek Culek

--- a/public/styles/_articles.scss
+++ b/public/styles/_articles.scss
@@ -5,7 +5,7 @@
 
 article {
 	.article__body, .page__body {
-		max-width: 850px;
+		max-width: $max-content-width;
 		h2 {
 			margin-bottom: $grid-gutter-width;
 		}
