--- a/public/styles/_product-detail.scss
+++ b/public/styles/_product-detail.scss
@@ -75,6 +75,12 @@
 						}
 					}
 				}
+				&:first-child {
+					border-top: none;
+					li:first-child {
+						padding-top: 0;
+					}
+				}
 			}
 		}
 		
