--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -84,3 +84,6 @@
 @import "shared/btn_default";
 @import "shared/fileicons";
 @import "shared/colors";
+
+@import "print";
+//@import "img_colors_preview";
