--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -1,9 +1,34 @@
+// card deck margin for smaller displays or denser layouts
+$card-deck-margin-sm: $card-deck-margin / 2;
+
+// utility for setting widths in card-decks
+// $card-width: in % (will be adjusted for margins etc. automatically). If zero, then card widths are not set at all.
+// $margin: card margin (typically global $card-deck-margin)
+@mixin card-deck-sizing( $card-width:0, $margin: $card-deck-margin ) {
+	//outline: 1px dotted orangered;
+	margin-left: 0 - $margin;
+	margin-right: 0 - $margin;
+	@if $card-width!=0 {
+		.card {
+			//outline: 1px dotted red;
+			flex-basis: calc(#{$card-width} - #{$margin} * 2);
+			max-width: calc(#{$card-width} - #{$margin} * 2);
+			margin-left: $margin;
+			margin-right: $margin;
+			margin-bottom: $margin * 2;
+		}
+	}
+}
+
+
 .card {
 	
 	border: none;
 	border: 1px dashed $border-color;
-	border-left: none;
-	border-top: none;
+	@if $card-deck-margin==0 {
+		border-left: none;
+		border-top: none;
+	}
 	
 	position: relative;
 	
@@ -14,6 +39,13 @@
 	
 	.card-title {
 		font-size: 1rem;
+		flex-grow: 8;
+	}
+	
+	
+	.card-body--article {
+		display: flex;
+		flex-direction: column;
 	}
 	
 	.card-meta {
@@ -66,6 +98,36 @@
 		right: $grid-gutter-width/2;
 		top: $grid-gutter-width/2;
 	}
+	
+	&--horizontal {
+		display: grid;
+		grid-template-columns: 200px 1fr;
+		grid-template-rows: 1fr auto;
+		grid-template-areas: "card-image card-body"
+												"card-image card-footer";
+		.card-img-top {
+			grid-area: card-image;
+		}
+		.card-body {
+			grid-area: card-body;
+			align-self: stretch;
+		}
+		.card-footer {
+			grid-area: card-footer;
+			align-self: end;
+		}
+		&.card--compact {
+			grid-template-columns: 150px 1fr;
+		}
+		
+		@include media-breakpoint-only(md){
+			grid-template-columns: 130px 1fr;
+		}
+		@include media-breakpoint-only(xs){
+			grid-template-columns: 30% 1fr;
+		}
+		
+	}
 }
 
 // When displaying lists as card decks, groups or columns 
@@ -101,98 +163,135 @@ a.card {
 
 
 // Controlled widths for card
-.card-deck--sized-4 {
+.card-deck {
+	margin-left: 0 - $card-deck-margin;
+	margin-right: 0 - $card-deck-margin;
+	margin-bottom: 0;
 	.card {
-		@include media-breakpoint-down(xs){
-			border-right: none;
-			&:last-child {
-				border-bottom: none;
+		flex-shrink: 0;
+		flex-grow: 0;
+	}
+	@include media-breakpoint-down(xs){
+		display: block;
+		margin-left: 0 - $grid-gutter-width / 2;
+		margin-right: 0 - $grid-gutter-width / 2;
+		.card {
+			border-left: 0;
+			border-right: 0;
+			margin-left: 0;
+			margin-right: 0;
+			margin-bottom: 0;
+			&:not(:first-child) {
+				border-top: 0;
 			}
 		}
-		@include media-breakpoint-up(sm){
-			flex-shrink: 0;
-			flex-grow: 0;
+		@if $card-deck-margin==0 {
+			///margin-left: 0 - $grid-gutter-width / 2;
+			//margin-right: 0 - $grid-gutter-width / 2;
+			.card {
+				border-top: 0;
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
+.card-deck--sized-4 {
+	
+	@include media-breakpoint-only(sm){
+		.card {
 			margin-bottom: $card-deck-margin * 2;
 		}
-		// 2 cols on SM up
-		@include media-breakpoint-between(sm, md){
-			flex-basis: calc(50% - #{$card-deck-margin} * 2);
-			min-width: calc(50% - #{$card-deck-margin} * 2);
+	}
+	
+	// 2 cols on SM up
+	@include media-breakpoint-between(sm, md){
+		@include card-deck-sizing( 50%, $card-deck-margin-sm );
+		.card {
 			
 			// borders handling
-			&:nth-child(2n+2) {
-				border-right: none;
-			}
-			&:last-child {
-				border-bottom: none;
-			}
-			// first in row, in last row
-			&:nth-child(2n+1) {
-				&:nth-last-child(1), &:nth-last-child(2) {
+			@if $card-deck-margin==0 {
+				&:nth-child(2n+2) {
+					border-right: none;
+				}
+				&:last-child {
 					border-bottom: none;
 				}
-			}
-			// second in row, in last row
-			&:nth-child(2n+2) {
-				&:nth-last-child(1) {
-					border-bottom: none;
+				// first in row, in last row
+				&:nth-child(2n+1) {
+					&:nth-last-child(1), &:nth-last-child(2) {
+						border-bottom: none;
+					}
+				}
+				// second in row, in last row
+				&:nth-child(2n+2) {
+					&:nth-last-child(1) {
+						border-bottom: none;
+					}
 				}
 			}
 		}
-		// 3 cols on LG up
-		@include media-breakpoint-only(lg){
-			flex-basis: calc(33.333% - #{$card-deck-margin} * 2);
-			min-width: calc(33.333% - #{$card-deck-margin} * 2);
+	}
+	
+	// 3 cols on LG up
+	@include media-breakpoint-only(lg){
+		@include card-deck-sizing( percentage(1/3), $card-deck-margin );
+		.card {
 			
 			// borders handling
-			&:nth-child(3n+3) {
-				border-right: none;
-			}
-			&:last-child {
-				border-bottom: none;
-			}
-			// first in row, in last row
-			&:nth-child(3n+1) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+			@if $card-deck-margin==0 {
+				&:nth-child(3n+3) {
+					border-right: none;
+				}
+				&:last-child {
 					border-bottom: none;
 				}
-			}
-			// second in row, in last row
-			&:nth-child(3n+2) {
-				&:nth-last-child(1), &:nth-last-child(2) {
-					border-bottom: none;
+				// first in row, in last row
+				&:nth-child(3n+1) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+						border-bottom: none;
+					}
+				}
+				// second in row, in last row
+				&:nth-child(3n+2) {
+					&:nth-last-child(1), &:nth-last-child(2) {
+						border-bottom: none;
+					}
 				}
 			}
 		}
-		// 4 cols on LG up
-		@include media-breakpoint-up(xl){
-			flex-basis: calc(25% - #{$card-deck-margin} * 2);
-			min-width: calc(25% - #{$card-deck-margin} * 2);
+	}
+	
+	// 4 cols on XL up
+	@include media-breakpoint-up(xl){
+		@include card-deck-sizing( 25%, $card-deck-margin );
+		.card {
 			
 			// borders handling
-			&:nth-child(4n+4) {
-				border-right: none;
-			}
-			&:last-child {
-				//border-right: none;
-				border-bottom: none;
-			}
-			// first in row, in last row
-			&:nth-child(4n+1) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4) {
+			@if $card-deck-margin==0 {
+				&:nth-child(4n+4) {
+					border-right: none;
+				}
+				&:last-child {
 					border-bottom: none;
 				}
-			}
-			// second in row, in last row
-			&:nth-child(4n+2) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
-					border-bottom: none;
+				// first in row, in last row
+				&:nth-child(4n+1) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4) {
+						border-bottom: none;
+					}
 				}
-			}
-			// 3rd in row, in last row
-			&:nth-child(4n+3) {
-				&:nth-last-child(1), &:nth-last-child(2) {
-					border-bottom: none;
+				// second in row, in last row
+				&:nth-child(4n+2) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+						border-bottom: none;
+					}
+				}
+				// 3rd in row, in last row
+				&:nth-child(4n+3) {
+					&:nth-last-child(1), &:nth-last-child(2) {
+						border-bottom: none;
+					}
 				}
 			}
 		}
@@ -200,37 +299,51 @@ a.card {
 }
 
 .card-deck--sized-3 {
-	.card {
-		@include media-breakpoint-down(sm){
-			border-right: none;
-			flex-basis: 100%;
-			&:last-child {
-				border-bottom: none;
-			}
-		}
-		// 3 cols on MD up
-		@include media-breakpoint-up(md){
-			flex-shrink: 0;
-			flex-grow: 0;
-			flex-basis: calc(33.333% - #{$card-deck-margin} * 2);
-			min-width: calc(33.333% - #{$card-deck-margin} * 2);
+	
+	// 3 cols on MD up, smaller margins
+	@include media-breakpoint-up(md){
+		@include card-deck-sizing( percentage(1/3), $card-deck-margin-sm );
+		.card {
 			
 			// borders handling
-			&:nth-child(3n+3) {
-				border-right: none;
-			}
-			&:last-child {
-				border-bottom: none;
-			}
-			// first in row, in last row
-			&:nth-child(3n+1) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+			@if $card-deck-margin==0 {
+				&:nth-child(3n+3) {
+					border-right: none;
+				}
+				&:last-child {
 					border-bottom: none;
 				}
+				// first in row, in last row
+				&:nth-child(3n+1) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+						border-bottom: none;
+					}
+				}
+				// second in row, in last row
+				&:nth-child(3n+2) {
+					&:nth-last-child(1), &:nth-last-child(2) {
+						border-bottom: none;
+					}
+				}
 			}
-			// second in row, in last row
-			&:nth-child(3n+2) {
-				&:nth-last-child(1), &:nth-last-child(2) {
+		}
+	}
+	
+	// 3 cols on LG up
+	@include media-breakpoint-up(lg){
+		@include card-deck-sizing( percentage(1/3), $card-deck-margin );
+	}
+	
+	// 1 col SM down
+	@include media-breakpoint-only(sm){
+		@include card-deck-sizing( 100%, 0 );
+		.card {
+			margin-bottom: $card-deck-margin * 2;
+		
+			// border handling
+			@if $card-deck-margin==0 {
+				border-right: none;
+				&:last-child {
 					border-bottom: none;
 				}
 			}
@@ -239,121 +352,133 @@ a.card {
 }
 
 .card-deck--sized-2 {
-	.card {
-		@include media-breakpoint-down(sm){
-			border-right: none;
-			flex-basis: 100%;
-			&:last-child {
-				border-bottom: none;
-			}
-		}
-		// 2 cols on MD up
-		@include media-breakpoint-up(md){
-			flex-shrink: 0;
-			flex-grow: 0;
-			flex-basis: calc(50% - #{$card-deck-margin} * 2);
-			min-width: calc(50% - #{$card-deck-margin} * 2);
+	
+	// 1 col SM down
+	@include media-breakpoint-only(sm){
+		@include card-deck-sizing( 100%, 0 );
+		.card {
+			margin-bottom: $card-deck-margin*2;
 			
-			// borders handling
-			&:nth-child(2n+2) {
-				border-right: none;
-			}
-			&:last-child {
-				border-bottom: none;
-			}
-			// first in row, in last row
-			&:nth-child(2n+1) {
-				&:nth-last-child(1), &:nth-last-child(2) {
-					border-bottom: none;
-				}
-			}
-			// second in row, in last row
-			&:nth-child(2n+2) {
-				&:nth-last-child(1) {
+			//border handling
+			@if $card-deck-margin==0 {
+				&:last-child {
 					border-bottom: none;
 				}
 			}
 		}
 	}
+	
+	// 2 cols on MD up, smaller margins
+	@include media-breakpoint-up(md){
+		@include card-deck-sizing( 50%, $card-deck-margin-sm );
+		.card {
+			
+			// borders handling
+			@if $card-deck-margin==0 {
+				&:nth-child(2n+2) {
+					border-right: none;
+				}
+				&:last-child {
+					border-bottom: none;
+				}
+				// first in row, in last row
+				&:nth-child(2n+1) {
+					&:nth-last-child(1), &:nth-last-child(2) {
+						border-bottom: none;
+					}
+				}
+				// second in row, in last row
+				&:nth-child(2n+2) {
+					&:nth-last-child(1) {
+						border-bottom: none;
+					}
+				}
+			}
+		}
+	}
+	
+	// 2 cols on LG up
+	@include media-breakpoint-up(lg){
+		@include card-deck-sizing( 50%, $card-deck-margin );
+	}
 }
 
 .card-deck--sized-6 {
-	.card {
-		flex-basis: 100%;
-		
-		flex-shrink: 0;
-		flex-grow: 0;
-		
-		@include media-breakpoint-down(xs){
-			border-right: none;	
-		}
-		@include media-breakpoint-between(sm,md){
-			flex-basis: calc(33.333% - #{$card-deck-margin} * 2);
-			min-width: calc(33.333% - #{$card-deck-margin} * 2);
+	
+	// 6 cards on LG up
+	@include media-breakpoint-up(lg) {
+		@include card-deck-sizing( percentage(1/6), $card-deck-margin-sm );
+		.card {
 			
 			// borders handling
-			&:nth-child(3n+3) {
-				border-right: none;
-			}
-			&:last-child {
-				border-bottom: none;
-			}
-			// first in row, in last row
-			&:nth-child(3n+1) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+			@if $card-deck-margin==0 {
+				&:nth-child(6n+6) {
+					border-right: none;
+				}
+				&:last-child {
+					//border-right: none;
 					border-bottom: none;
 				}
-			}
-			// second in row, in last row
-			&:nth-child(3n+2) {
-				&:nth-last-child(1), &:nth-last-child(2) {
-					border-bottom: none;
+				// first in row, in last row
+				&:nth-child(6n+1) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4), &:nth-last-child(5), &:nth-last-child(6) {
+						border-bottom: none;
+					}
+				}
+				// second in row, in last row
+				&:nth-child(6n+2) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4), &:nth-last-child(5) {
+						border-bottom: none;
+					}
+				}
+				// 3rd in row, in last row
+				&:nth-child(6n+3) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4) {
+						border-bottom: none;
+					}
+				}
+				// 4th in row, in last row
+				&:nth-child(6n+4) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+						border-bottom: none;
+					}
+				}
+				// 5th in row, in last row
+				&:nth-child(6n+5) {
+					&:nth-last-child(1), &:nth-last-child(2) {
+						border-bottom: none;
+					}
 				}
 			}
 		}
-		@include media-breakpoint-up(lg) {
-			flex-basis: calc(#{percentage(1/6)} - #{$card-deck-margin} * 2);
-			min-width: calc(#{percentage(1/6)} - #{$card-deck-margin} * 2);
+	}
 	
+	// 3 cards on SM, MD
+	@include media-breakpoint-between(sm,md){
+		@include card-deck-sizing( percentage(1/3), $card-deck-margin-sm );
+		.card {
+			
 			// borders handling
-			&:nth-child(6n+6) {
-				border-right: none;
-			}
-			&:last-child {
-				//border-right: none;
-				border-bottom: none;
-			}
-			// first in row, in last row
-			&:nth-child(6n+1) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4), &:nth-last-child(5), &:nth-last-child(6) {
+			@if $card-deck-margin==0 {
+				&:nth-child(3n+3) {
+					border-right: none;
+				}
+				&:last-child {
 					border-bottom: none;
 				}
-			}
-			// second in row, in last row
-			&:nth-child(6n+2) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4), &:nth-last-child(5) {
-					border-bottom: none;
+				// first in row, in last row
+				&:nth-child(3n+1) {
+					&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+						border-bottom: none;
+					}
+				}
+				// second in row, in last row
+				&:nth-child(3n+2) {
+					&:nth-last-child(1), &:nth-last-child(2) {
+						border-bottom: none;
+					}
 				}
 			}
-			// 3rd in row, in last row
-			&:nth-child(6n+3) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3), &:nth-last-child(4) {
-					border-bottom: none;
-				}
-			}
-			// 4th in row, in last row
-			&:nth-child(6n+4) {
-				&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
-					border-bottom: none;
-				}
-			}
-			// 5th in row, in last row
-			&:nth-child(6n+5) {
-				&:nth-last-child(1), &:nth-last-child(2) {
-					border-bottom: none;
-				}
-			}
-	
 		}
 	}
 }
