--- a/public/styles/_content_header.scss
+++ b/public/styles/_content_header.scss
@@ -8,7 +8,12 @@ header.content-header, .content-header {
 		order: 2;
 		flex-basis: 50%;
 		flex-shrink: 0;
-		flex-grow: 0;
+		flex-grow: 2;
+		&--portrait {
+			flex-basis: 33%;
+			flex-basis: 100% - percentage($max-content-width/($max-page-width - (2 * $grid-gutter-width)));
+			flex-grow: 0;
+		}
 	}
 	.content-header__text {
 		margin-bottom: $grid-gutter-width;
@@ -42,7 +47,7 @@ header.content-header, .content-header {
 	.content-header__image + .content-header__text {
 		flex-basis: 50%;
 		flex-shrink: 0;
-		flex-grow: 0;
+		flex-grow: 2;
 		padding-right: $grid-gutter-width;
 		&--dark {
 			// when __text has dark background
