--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -238,15 +238,40 @@ ol.breadcrumb {
 			a:focus {
 				outline: none;
 			}
+			.dropdown-toggle {
+				&:after {
+					border: none;
+					content: "\f078";
+					color: $navbar-dark-color;
+					font-family: "Font Awesome 5 Free";
+					font-weight: 900;
+					font-size: 0.65em;
+					margin-left: 0.5em;
+					//margin-top: 0.2em;
+					position: relative;
+					top: 0.05em;
+				}
+				&:focus, &:active, &:hover {
+					outline: none;
+					box-shadow: none;
+					&:after {
+						color: $navbar-dark-hover-color;
+					}
+				}
+			}
 			.dropdown-menu {
-				background-color: $green;
+				background-color: rgba( desaturate( lighten( $green, 3% ), 5% ),0.98 );
+				@supports(backdrop-filter: blur(5px)){
+					background-color: rgba($green,0.9);
+					backdrop-filter: blur(5px);
+				}
 				text-transform: none;
 				border: none;
 				top: 97%;
 				a {
 					color: white;
 					&:hover, &:active, &:focus {
-						background-color: rgba($dark, 0.25);
+						background-color: rgba($dark, 0.35);
 					}
 				}
 			}
