--- a/public/styles/_content_header.scss
+++ b/public/styles/_content_header.scss
@@ -21,9 +21,25 @@ header.content-header, .content-header {
 			//margin-bottom: $grid-gutter-width;
 			margin-bottom: 0;
 		}
+		
+		.author {
+			display: inline-block;
+			width: auto;
+			padding: 0.25em 0.5em;
+			background-color: $body-bg;
+			margin: 1rem 0;
+			font-weight: 600;
+			//font-size: 0.875rem;
+			color: black;
+			a {
+				color: inherit;
+				//text-decoration: none;
+			}
+		}
 
 		.teaser {
 			//margin-top: ( 0 - $grid-gutter-width * 0.75 );
+			font-size: 1.25rem;
 			margin-top: $grid-gutter-width * 0.25;
 			p:last-child {
 				margin-bottom: 0;
@@ -35,6 +51,10 @@ header.content-header, .content-header {
 			&:empty {
 				display: none;
 			}
+		}
+		
+		.teaser + .tags {
+			margin-top: 1rem;
 		}
 
 		.meta {
@@ -62,6 +82,7 @@ header.content-header, .content-header {
 			}
 		}
 	}
+	
 	@include media-breakpoint-down(md){
 		.content-header__image {
 			flex-basis: 40%;
