[Delivery fee by agreement]

--- a/public/styles/_lists.scss
+++ b/public/styles/_lists.scss
@@ -118,7 +118,7 @@ ul.list--radios {
 
 				}
 				.v-hint {
-					display: none;
+					//display: none;
 				}
 				.v-price {
 					font-weight: 600;
