--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -250,6 +250,12 @@ ol.breadcrumb {
 					//margin-top: 0.2em;
 					position: relative;
 					top: 0.05em;
+					transition: transform 0.25s;
+				}
+				&[aria-expanded="true"] {
+					&:after {
+						transform: rotate(-180deg);
+					}
 				}
 				&:focus, &:active, &:hover {
 					outline: none;
@@ -257,6 +263,12 @@ ol.breadcrumb {
 					&:after {
 						color: $navbar-dark-hover-color;
 					}
+				}
+			}
+			div.nav-link a {
+				color: inherit;
+				&:hover {
+					text-decoration: none;
 				}
 			}
 			.dropdown-menu {
