Code synced with the project Ondrejuv obchudek

--- a/public/admin/styles/application.scss
+++ b/public/admin/styles/application.scss
@@ -38,6 +38,10 @@
 
 @import "nav-section";
 
+@import "dashboard";
+
+@import "charts";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
