--- a/public/styles/_lists.scss
+++ b/public/styles/_lists.scss
@@ -27,7 +27,7 @@ ol.timeline {
 				display: inline-flex;
 				justify-content: center;
 				align-items: center;
-				background-color: $green;
+				background-color: $brand;
 				//background-color: $primary;
 				color: white;
 				line-height: 1;
