--- a/public/styles/_prices.scss
+++ b/public/styles/_prices.scss
@@ -2,7 +2,7 @@
 .card-price {
 	display: inline-block;
 	.currency_main {
-		color: $green;
+		color: $brand;
 		font-size: 1.25rem;
 		font-weight: 900;
 		.price {
