--- a/public/styles/_section_add_to_cart.scss
+++ b/public/styles/_section_add_to_cart.scss
@@ -27,7 +27,7 @@
 				.prices {
 					margin-bottom: $grid-gutter-width/2;
 					.price--main {
-						color: $green;
+						color: $brand;
 						font-size: 1.75rem;
 						font-weight: 600;
 						//margin-bottom: 1rem;
