--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -211,7 +211,7 @@ ol.breadcrumb {
 		
 		.navbar-nav-main-mobile {
 			//display: block;
-			background-color: $green;
+			background-color: $brand;
 		}
 		
 		
@@ -272,9 +272,9 @@ ol.breadcrumb {
 				}
 			}
 			.dropdown-menu {
-				background-color: rgba( desaturate( lighten( $green, 3% ), 5% ),0.98 );
+				background-color: rgba( desaturate( lighten( $brand, 3% ), 5% ),0.98 );
 				@supports(backdrop-filter: blur(5px)){
-					background-color: rgba($green,0.9);
+					background-color: rgba($brand,0.9);
 					backdrop-filter: blur(5px);
 				}
 				text-transform: none;
