--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -85,6 +85,8 @@
 
 @import "search_results";
 
+@import "filter";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
