child categories list css tuning

--- a/public/styles/_list-categories.scss
+++ b/public/styles/_list-categories.scss
@@ -112,7 +112,7 @@ ul.list--categories {
 		margin-bottom: 0.5rem;
 		a {
 			display: flex;
-			align-items: center;
+			align-items: flex-start;
 			.child-category {
 				&__image {
 					margin-right: 0.5rem;
